--- a/extra/iredadmin-i18n/vi_VN/LC_MESSAGES/iredadmin.po
+++ b/extra/iredadmin-i18n/vi_VN/LC_MESSAGES/iredadmin.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: iRedAdmin 1.1.0\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2009-10-02 01:16+0800\n"
-"PO-Revision-Date: 2010-02-07 00:54+0800\n"
+"PO-Revision-Date: 2010-02-09 11:20+0800\n"
 "Last-Translator: Lâm Minh Thông <lmthong@gmail.com>\n"
 "Language-Team: vi_VN <LL@li.org>\n"
 "Plural-Forms: nplurals=1; plural=0\n"
@@ -238,7 +238,6 @@ msgstr "Sửa thông tin tên miền"
 
 #: ../templates/default/ldap/alias_profile.html:40
 #: ../templates/default/ldap/maillist_profile.html:54
-#: ../templates/default/ldap/maillist_profile.html:114
 msgid "Members"
 msgstr "Ghi nhớ tài khoản này"
 
@@ -530,7 +529,6 @@ msgid "List all mail aliases."
 msgstr "Danh sách tài khoản."
 
 #: ../templates/default/ldap/domains.html:102
-#: ../templates/default/panel/log.html:136
 #: ../templates/default/policyd/wblist.html:139
 msgid "Are you sure want to delete selected domain(s) and accounts under it?"
 msgstr "Bạn muốn xoá tên miền đã chọn và các tài khoản trong đó?"
@@ -952,7 +950,6 @@ msgstr ""
 
 #: ../templates/default/ldap/macros.html:595
 #: ../templates/default/ldap/macros.html:603
-#: ../templates/default/ldap/maillist_profile.html:103
 msgid "Public"
 msgstr ""
 
@@ -961,7 +958,6 @@ msgid "Member"
 msgstr "Ghi nhớ tài khoản này"
 
 #: ../templates/default/ldap/macros.html:601
-#: ../templates/default/ldap/maillist_profile.html:119
 msgid "Announcement"
 msgstr ""
 
@@ -989,8 +985,12 @@ msgid "Access Policy Level"
 msgstr ""
 
 #: ../templates/default/ldap/maillist_profile.html:103
-msgid "Email is unrestricted."
+msgid "Unrestricted"
 msgstr "Tài khoản thư"
+
+#: ../templates/default/ldap/maillist_profile.html:103
+msgid "Everyone can send mail to this address."
+msgstr ""
 
 #: ../templates/default/ldap/maillist_profile.html:109
 msgid "Domain Wide"
@@ -998,17 +998,27 @@ msgstr "Tên miền"
 
 #: ../templates/default/ldap/maillist_profile.html:109
 #, python-format
-msgid "Restricted to all users under domain <strong>%s</strong>."
+msgid "Only users under domain <strong>%s</strong> can send mail to this address."
 msgstr "Mặc định là <strong>%s</strong>."
 
 #: ../templates/default/ldap/maillist_profile.html:114
+msgid "Members Only"
+msgstr "Ghi nhớ tài khoản này"
+
+#: ../templates/default/ldap/maillist_profile.html:114
 #, python-format
-msgid "Restricted to <a href=\"%s\">members</a> of this mail list."
+msgid ""
+"Only <a href=\"%s\">members</a> of this mail list can send mail to this "
+"address."
 msgstr ""
 
 #: ../templates/default/ldap/maillist_profile.html:119
+msgid "Moderators Only"
+msgstr "Phiên bản iRedMail hiện tại"
+
+#: ../templates/default/ldap/maillist_profile.html:119
 #, python-format
-msgid "Restricted to <a href=\"%s\">moderators</a> only."
+msgid "Only <a href=\"%s\">moderators</a> can send mail to this address."
 msgstr ""
 
 #: ../templates/default/ldap/maillist_profile.html:128
@@ -1418,6 +1428,10 @@ msgstr "Địa chỉ hộp thư"
 #: ../templates/default/panel/log.html:107
 msgid "Message"
 msgstr ""
+
+#: ../templates/default/panel/log.html:136
+msgid "Are you sure want to delete selected item(s)?"
+msgstr "Bạn có chắc muốn xoá các tài khoản đã chọn?"
 
 #: ../templates/default/panel/macros.html:4
 #: ../templates/default/policyd/macros.html:4
