--- a/extra/iredadmin-i18n/fr_FR/LC_MESSAGES/iredadmin.po
+++ b/extra/iredadmin-i18n/fr_FR/LC_MESSAGES/iredadmin.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: iRedAdmin 1.1.0\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2009-10-04 00:45+0800\n"
-"PO-Revision-Date: 2010-02-07 00:54+0800\n"
+"PO-Revision-Date: 2010-02-09 11:20+0800\n"
 "Last-Translator: Mael LE SAOUT <mael.lesaout@gmail.com>\n"
 "Language-Team: fr_FR <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
@@ -237,7 +237,6 @@ msgstr "Modifier le profil de l'alias de messagerie"
 
 #: ../templates/default/ldap/alias_profile.html:40
 #: ../templates/default/ldap/maillist_profile.html:54
-#: ../templates/default/ldap/maillist_profile.html:114
 msgid "Members"
 msgstr "Membres"
 
@@ -533,7 +532,6 @@ msgid "List all mail aliases."
 msgstr "Afficher tous les alias de messagerie."
 
 #: ../templates/default/ldap/domains.html:102
-#: ../templates/default/panel/log.html:136
 #: ../templates/default/policyd/wblist.html:139
 msgid "Are you sure want to delete selected domain(s) and accounts under it?"
 msgstr ""
@@ -965,7 +963,6 @@ msgstr "Ajouter de nouveaux membres à l'alias"
 
 #: ../templates/default/ldap/macros.html:595
 #: ../templates/default/ldap/macros.html:603
-#: ../templates/default/ldap/maillist_profile.html:103
 msgid "Public"
 msgstr ""
 
@@ -974,7 +971,6 @@ msgid "Member"
 msgstr "Membres"
 
 #: ../templates/default/ldap/macros.html:601
-#: ../templates/default/ldap/maillist_profile.html:119
 msgid "Announcement"
 msgstr ""
 
@@ -1002,8 +998,12 @@ msgid "Access Policy Level"
 msgstr "Politique d'accès"
 
 #: ../templates/default/ldap/maillist_profile.html:103
-msgid "Email is unrestricted."
+msgid "Unrestricted"
 msgstr "Service de messagerie"
+
+#: ../templates/default/ldap/maillist_profile.html:103
+msgid "Everyone can send mail to this address."
+msgstr ""
 
 #: ../templates/default/ldap/maillist_profile.html:109
 msgid "Domain Wide"
@@ -1011,17 +1011,27 @@ msgstr "Nom de Domaine"
 
 #: ../templates/default/ldap/maillist_profile.html:109
 #, python-format
-msgid "Restricted to all users under domain <strong>%s</strong>."
+msgid "Only users under domain <strong>%s</strong> can send mail to this address."
 msgstr "Nombre actuel: <strong>%s</strong>."
 
 #: ../templates/default/ldap/maillist_profile.html:114
+msgid "Members Only"
+msgstr "Membres"
+
+#: ../templates/default/ldap/maillist_profile.html:114
 #, python-format
-msgid "Restricted to <a href=\"%s\">members</a> of this mail list."
+msgid ""
+"Only <a href=\"%s\">members</a> of this mail list can send mail to this "
+"address."
 msgstr ""
 
 #: ../templates/default/ldap/maillist_profile.html:119
+msgid "Moderators Only"
+msgstr "Membres actuels"
+
+#: ../templates/default/ldap/maillist_profile.html:119
 #, python-format
-msgid "Restricted to <a href=\"%s\">moderators</a> only."
+msgid "Only <a href=\"%s\">moderators</a> can send mail to this address."
 msgstr ""
 
 #: ../templates/default/ldap/maillist_profile.html:128
@@ -1437,6 +1447,10 @@ msgstr "Adresse de destinataire BCC"
 #: ../templates/default/panel/log.html:107
 msgid "Message"
 msgstr ""
+
+#: ../templates/default/panel/log.html:136
+msgid "Are you sure want to delete selected item(s)?"
+msgstr "Êtes-vous sur de vouloir supprimer le(s) compte(s) sélectionné(s)?"
 
 #: ../templates/default/panel/macros.html:4
 #: ../templates/default/policyd/macros.html:4
