--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.6.0-RC1:
+    * New LDAP attribute: userManager. Used to replace 'manager' attribute.
     * Update iRedAPD to 1.2.3.
 
 iRedMail-0.6.0-beta3:
