Remove inline comment in freshclam setting. Thanks wildweasel@forum.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,7 @@
 iRedMail-0.6.0:
+    * Remove inline comment in freshclam setting. Thanks wildweasel@forum.
+    * Fix incorrect path of policyd-cleanup on Debian & Ubuntu. Thanks
+      tkuntario@forum.
     * Improve ldap scheme file to use 'sub' index.
 
 iRedMail-0.6.0-RC1:
