--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,6 @@
 iRedMail-0.6.0:
+    * New LDAP attributes: mailWhitelistRecipient, mailBlacklistRecipient.
+      Used for per-user recipient restrictions.
     * Fix: freshclam can't start after update to 0.96. Fixed by removing inline
       comment in freshclam setting. Thanks wildweasel@forum.
     * Fix incorrect path of policyd-cleanup on Debian & Ubuntu. Thanks
