* Add missing table on Debian 5 and Ubuntu 9.04:       postfixpolicyd.blacklist_dnsname.     * Upgrade phpMyAdmin to 2.11.10.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,7 @@
 iRedMail-0.6.0:
+    * Add missing table on Debian 5 and Ubuntu 9.04:
+      postfixpolicyd.blacklist_dnsname.
+    * Upgrade phpMyAdmin to 2.11.10.
     * Add 'enableinternal=1' in vmail.mailbox and 'enabledService: internal'
       in OpenLDAP.
     * Don't allow to login with shadow address. It may cause login failed due
