--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,3 +1,6 @@
+iRedMail-0.6.1:
+    * Update iRedAPD to 1.3.1.
+
 iRedMail-0.6.0:
     * Disallow to use multiple identities in postfix and roundcube.
     * Update iRedAPD to 1.3.0.
