--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.6.1:
+    * Run iRedAdmin as a low privilege user (iredadmin).
     * Improve Ubuntu 10.04 support.
     * Update iRedAPD to 1.3.3.
 
