--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,7 +1,7 @@
 iRedMail-0.6.1:
     * Run iRedAdmin as a low privilege user (iredadmin).
     * Improve Ubuntu 10.04 support.
-    * Update iRedAPD to 1.3.3.
+    * Update iRedAPD to 1.3.3. Run iRedAPD as a low privilege user (iredapd).
 
 iRedMail-0.6.0:
     * Disallow to use multiple identities in postfix and roundcube.
