--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,6 +1,6 @@
 iRedMail-0.6.1:
-    * Add missing mail log files (mail.info, mail.err) in logrotate. Thanks
-      to BigMichi1@forum.
+    * Add missing mail log files (mail.info, mail.err, mail.warn) in logrotate.
+      Thanks to BigMichi1@forum.
     * Catch-all account support in MySQL backend.
     * Run iRedAdmin as a low privilege user (iredadmin).
     * Improve Ubuntu 10.04 support.
