--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,5 +1,5 @@
 iRedMail-0.7.0:
-    * Integrate MySQL in Amavisd.
+    * Integrate MySQL in Amavisd (@lookup_sql_dsn, @storage_sql_dsn).
     * Improve backup mx support with MySQL backend. Thanks tiangangnet@bbs.
 
 iRedMail-0.6.1:
