--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,4 +1,5 @@
 iRedMail-0.7.0:
+    * Bypass shadow address in postfix sender login checking.
     * Improve postfix ldap lookup to make mail list for alias domain work.
       Thanks for Andrea Di Dato's feedback and testing.
     * Fix incorrect file location of awstats.pl on Debian/Ubuntu.
