--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,6 +1,6 @@
 iRedMail-0.7.0:
     * Bypass shadow address in postfix sender login checking.
-    * Improve postfix ldap lookup to make mail list for alias domain work.
+    * Improve postfix ldap lookup to make mail list of alias domain work.
       Thanks for Andrea Di Dato's feedback and testing.
     * Fix incorrect file location of awstats.pl on Debian/Ubuntu.
     * Add script used to backup OpenLDAP data: tools/backup_openldap.sh.
