--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,5 +1,8 @@
 iRedMail-0.7.0-beta2:
-    * Enable whitelising sender (WHITELISTSENDER=1) in policyd by default.
+    * Improvements:
+        + Enable whitelising sender (WHITELISTSENDER=1) in policyd by default.
+    * Fixed:
+        + Fix incorrect file localtion of php.ini on OpenSuSE.
 
 iRedMail-0.7.0-beta1:
     * Works on OpenSuSE 11.3. Tested on 11.3, but it should work well on
