--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,5 +1,7 @@
 iRedMail-0.7.0-beta2:
     * Improvements:
+        + Don't quarantine mails with bad header in Amavisd.
+          '$bad_header_quarantine_method=undef;'
         + Increase dovecot "mail_process_size" to 1024MB by default. Hope to
           avoid a dovecot "out of memory" issue when processing large mailbox.
           Thanks James Kong.
