--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -11,7 +11,8 @@ iRedMail-0.7.0-beta2:
     * Fixed:
         + Fix incorrect file localtion of php.ini on OpenSuSE.
     * Package Update:
-        + phpMyAdmin -> 3.3.8.1
+        + Roundcube webmail -> 0.5
+        + phpMyAdmin -> 3.3.9
 
 iRedMail-0.7.0-beta1:
     * Works on OpenSuSE 11.3. Tested on 11.3, but it should work well on
