--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,3 +1,7 @@
+iRedMail-0.7.0-beta3:
+    * Package update:
+        + Roundcube webmail -> 0.5.1
+
 iRedMail-0.7.0-beta2:
     * Improvements:
         + Auto create default IMAP folders with dovecot plugin: autocreate.
