--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -4,6 +4,7 @@ iRedMail-0.7.0-beta3:
           contacts in personal LDAP address book by default.
 
     * Improvements:
+        + Check domain status in virtual_mailbox_maps for MySQL backend.
         + Don't allow user to view ldap attributes: domainAdmin,
           domainGlobalAdmin.
 
