3 address books are available in Roundcube: sql, global ldap address book, personal ldap address book.
Note: Contacts will be stored in sql address book by default. Drag it to personal ldap address book will copy and save it in ldap.

--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -1,7 +1,6 @@
 iRedMail-0.7.0-beta3:
     * New features:
-        + Enable personal LDAP address book. Roundcube users will store
-          contacts in personal LDAP address book by default.
+        + Enable personal LDAP address book for OpenLDAP backend.
 
     * Improvements:
         + Check domain status in virtual_mailbox_maps, virtual_alias_maps
