--- a/iRedMail/ChangeLog
+++ b/iRedMail/ChangeLog
@@ -15,8 +15,8 @@ iRedMail-0.7.0-beta3:
           Thanks xulingyun@bbs for the feedback.
 
     * Package update/changes:
-        + Remove roundcube third-party plugin: imap_acl.
-        + Roundcube webmail -> 0.5.1
+        + iRedAdmin -> 0.1.4.
+        + Roundcube webmail -> 0.5.1. Remove 3rd-party plugin: imap_acl.
 
 iRedMail-0.7.0-beta2:
     * Improvements:
